crates/aranya-policy-compiler/tests/data/type_errors/deserialize_wrong_type_invalid_type.fail.policy
command Foo {
    seal {
        return todo()
    }
    open {
      return deserialize(3)
    }
    policy {}
}
